Inital commit of part service discovery

--- a/product-service/src/main/resources/application.properties
+++ b/product-service/src/main/resources/application.properties
@@ -1,2 +1,14 @@
 spring.data.mongodb.uri=mongodb://localhost:27017/product-service
+server.port = 8080
 
+#service-discovery
+#eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
+spring.application.name = product-service
+spring.cloud.consul.host=localhost
+spring.cloud.consul.port=8500
+spring.cloud.consul.discovery.service-name= product-service
+spring.cloud.consul.discovery.hostname=192.168.2.45
+
+
+# Actuator
+management.endpoints.web.exposure.include=*
